# FNE_pestiexpo

./: .env  .gitignore  docker-compose.yml  main.py  maj_meteo.sh  pyproject.toml
api/: Dockerfile  db.py  main.py  schemas.py
api/routers/: calendrier.py  communes.py  mesures.py  risque.py
dashboard/: app.py  config_app.py  optimize_geojson.py  utils_app.py
docs/: livrable4_faisabilite_fne.md  note_methodologique.md  note_preconisation_technique.md  note_technique.md
etl/: calcul_risque_journalier.py  config.py  etl_config.py  etl_mesures_pesticides.py  etl_meteo.py  etl_meteo_historique.py  etl_meteo_previsions.py  etl_statique.py  init_duckdb.py  utils.py
notebooks/: carte_risque_date.ipynb  explore_risque_commune.ipynb  explore_risque_commune.ipynb.bak
notebooks/IFT/: debug_calcul_risque.ipynb  exploreADONIS_db.ipynb  extract_code_culture_from_IGNpdf.py
notebooks/MESURES/: explore_mesures_pesticides.ipynb
notebooks/Meteo/: check_meteo_parquet.ipynb  connection_meteo_api.ipynb  connection_meteo_api.py  meteo_data_communes.ipynb  recup_meteo_historical_data.py  test_meteo.py  test_recup_arome_data.ipynb
notebooks/SAU/: compare_adonis_rpg.ipynb  config.py  extract_rpg_zone_annee.ipynb  recup_rpg.py  test_affichage_rpg.ipynb
notebooks/Tii/: test_usage_cpe_rigual.ipynb
