[project]
name = "modelisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.1",
    "eccodes>=2.45.0",
    "fastapi>=0.135.2",
    "fastexcel>=0.19.0",
    "ffmpeg>=1.4",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "mapflow>=0.2.14",
    "matplotlib>=3.10.8",
    "meteofetch>=0.5.6",
    "openmeteo-requests>=1.7.5",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "polars>=1.39.2",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
    "xarray>=2026.2.0",
    "xlsxwriter>=3.2.9",
]
